# otter-clone

./: .gitignore  README.md
docs/superpowers/plans/: 2026-05-09-otter-clone-backend.md  2026-05-09-otter-clone-frontend.md
docs/superpowers/specs/: 2026-05-09-otter-clone-design.md
scripts/: dev-server.sh  start.sh
server/: pyproject.toml
server/otter/: config.py  db.py  jobs.py  main.py  models.py  schemas.py  seed.py  storage.py  summarization.py  transcription.py
server/otter/api/: audio.py  lectures.py  settings.py  status.py  summaries.py  templates.py
server/tests/: conftest.py  test_audio.py  test_config.py  test_e2e.py  test_lectures.py  test_models.py  test_seed.py  test_settings.py  test_status.py  test_summaries.py  test_summarization.py  test_templates.py  test_transcription.py
server/tests/fixtures/: generate_clip.py
web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
web/src/: App.js  App.tsx  api.test.ts  api.ts  format.test.ts  format.ts  main.js  main.tsx  types.ts
web/src/components/: AudioPlayer.test.tsx  AudioPlayer.tsx  Layout.test.tsx  Layout.tsx  SummariesPanel.test.tsx  SummariesPanel.tsx  TemplateEditor.tsx  TranscriptView.test.tsx  TranscriptView.tsx
web/src/hooks/: useApi.test.tsx  useApi.ts  useAudioSync.test.tsx  useAudioSync.ts  useRecorder.test.ts  useRecorder.ts  useStatusPoll.test.ts  useStatusPoll.ts
web/src/pages/: LectureListPage.test.tsx  LectureListPage.tsx  LectureViewPage.test.tsx  LectureViewPage.tsx  RecorderPage.test.tsx  RecorderPage.tsx  SettingsPage.tsx  (+1 more)
