[project]
name = "otter"
version = "0.1.0"
description = "Local lecture transcription with faster-whisper"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0.36",
    "pydantic>=2.10",
    "anthropic>=0.40",
    "faster-whisper>=1.1.0",
    "onnxruntime>=1.20,<1.26",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not e2e'"
markers = [
    "e2e: end-to-end test that loads real models (slow, run with -m e2e)",
]
